--- a/marketInfo/templates/marketInfo/Short_Instructions.html
+++ b/marketInfo/templates/marketInfo/Short_Instructions.html
@@ -49,7 +49,7 @@ Il beneficio sociale associato alla tua produzione è pari a:</p>
  </p>
 <p>
     I punti da te ottenuti in termini di profitto e di beneficio sociale nel turno sorteggiato saranno trasformati
-    in euro secondo il tasso di conversione <strong>20 punti = 1 euro</strong>.
+    in euro.
 
 </p>
 {% endblocktrans %}
