Piccola limatura sul testo di welcome

--- a/welcome_choice/templates/welcome_choice/Welcome.html
+++ b/welcome_choice/templates/welcome_choice/Welcome.html
@@ -29,7 +29,7 @@ L’esperimento consiste di {{ n }} diverse attività da svolgere al computer e 
 Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
 </p>
 <p>
-    <strong>Ciascuna attività conduce a guadagnare dei punti che sono poi convertiti in denaro al tasso di {{ tasso }} punti per 1 Euro. </strong>
+    <strong>Ciascuna attività consente di guadagnare dei punti che sono poi convertiti in denaro al tasso di {{ tasso }} punti per 1 Euro. </strong>
 </p>
 <p>
 È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime.
