--- a/market/templates/market/Short_Instructions.html
+++ b/market/templates/market/Short_Instructions.html
@@ -5,9 +5,9 @@
 {% block short_instructions %}
 
 {% blocktrans trimmed %}
-<p> Ti ricordiamo che la tua quota di mercato è tanto maggiore quanto più alta la qualità del tuo bene
-    e più basso il suo prezzo. Allo stesso tempo è crescente nel prezzo del rivale e decrescente nella sua qualità.
-    La seguente tabella sintetizza queste relazioni.</p>
+<p> Your market share is higher the higher the quality and lower the price of the good you produce.
+    At the same time, it is increasing in the competitor's selling price and decreasing in its social quality.
+    The following table summarizes these relations.</p>
 {% endblocktrans %}
 
 <p>
@@ -40,18 +40,18 @@
 
 </p>
 {% blocktrans trimmed %}
-<p> In ogni turno il tuo profitto sarà pari a:</p>
+<p> In each round your profit will be equal to:</p>
 <p>
 
-<strong>Profitto = (Prezzo - Qualità) x Quota di mercato</strong>
+<strong>Profit = (Price - Quality) x Market share</strong>
  </p>
 <p>
-Il beneficio sociale associato alla tua produzione è pari a:</p>
-<p><strong>Beneficio sociale = 1,5 x Qualità x Quota di mercato</strong>
+The social contribution associated to your production at each round of the game will be equal to:</p>
+<p><strong>Social contribution = 1,5 x Quality x Market share</strong>
  </p>
 <p>
-    I punti da te ottenuti in termini di profitto e di beneficio sociale nel turno sorteggiato saranno trasformati
-    in euro.
+The points you earned in the paying period, both in terms of
+profit and social contribution, will be transformed in cash.
 
 </p>
 {% endblocktrans %}
