--- a/payment_recap/templates/payment_recap/PaymentRecap.html
+++ b/payment_recap/templates/payment_recap/PaymentRecap.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 {% for app in applications_results %}
-    <h3>{% trans "Activity summary" %} {{ forloop.counter }}</h3>
+    <h3>{% trans "Summary of Activity" %} {{ forloop.counter }}</h3>
     <p>{{app.description}}</p>
     <table class=table style='width: auto'>
         {% for row in app.table %}
