--- a/role_uncertain_dictator/templates/role_uncertain_dictator/Instructions.html
+++ b/role_uncertain_dictator/templates/role_uncertain_dictator/Instructions.html
@@ -6,10 +6,20 @@
 
 {% blocktrans trimmed %}
 
-You will be paired randomly and anonymously ...
-
-There are to split. You have to decide decide how many points she or he will retain. The rest will go to the other participant.
-
+This activity is played on a single round and participants will be matched in pairs.
+    Each pair has an endowment of 100 points to split between the two participants.
+    One of the participant will play the role of DECIDER, and thus will have to decide how to split the 100 points, by choosing the amount to keep.
+    The rest will go to the other participant who will play the role of RECEIVER and does not play any active part.
+    If the decider keeps an amount K, the corresponding receiver will get 100-K. </p> Each participant will in fact be part of two groups:
+in one group he/she will play the role of decider, while the receiver will be some subject x,
+whose identity he/she cannot know. In the other group he/she will be receiver, while the decider will be
+some other subject y (different from x), whose identity he/she cannot know. It is important to notice that the
+two groups to which you will be associated are certainly different. Eventually the computer will randomly select
+the groups to keep into account to determine the actual payoffs. In practice, there will be a 50% chance that the
+group in which you are decider is selected, and therefore that your choice will be implemented for you and subject
+x, and a 50% chance that instead the group in which you are receiver is selected, and therefore that subject y's
+choice will determine his/her and your payoff. The situation in which, for a subject, both groups to which he/she
+is associated are selected cannot arise.
 {% endblocktrans %}
 
 {% endblock %}
