--- a/risk/templates/risk/Instructions.html
+++ b/risk/templates/risk/Instructions.html
@@ -4,7 +4,10 @@
 {% block instructions %}
 
 {% blocktrans trimmed with endowment=Constants.endowment %}
-   You have an endowment of 100 points.  You can choose to invest part of this sum in a risky project. If the project goes well, which can happen with a 50% probability you will obtain 2.5 points for each point you invested. </p><p>If the project fails instead, you'll loose all the points invested in it. The points you do not invest will remain to you whatever the outcome of the project.
+   You have an endowment of 100 points.  You can choose to invest part
+of this sum in a risky project. If the project goes well, which can
+happen with a 50% probability, you will obtain 2.5 points for each point
+you invested. </p><p>If the project fails instead, you'll lose all the points you invested. The points you do not invest will remain to you whatever the outcome of the project.
 {% endblocktrans %}
 
 {% endblock %}
