--- a/welcome_choice/templates/welcome_choice/Welcome.html
+++ b/welcome_choice/templates/welcome_choice/Welcome.html
@@ -19,19 +19,19 @@ http://getbootstrap.com/components/
 
 
 {% blocktrans trimmed %}
-We are happy to welcome you to this experiment. Please read the following instructions carefully. During the experiment it is forbidden to communicate with other participants. Questions should be addressed to the organisers only.</p>
+We are pleased to welcome you to this experiment. Please read the following instructions carefully. During the experiment it is forbidden to communicate with other participants. Questions should be addressed to the organisers only.</p>
 <p>
-Taking part in this experiment you can earn money. The exact amount you will earn depends on your and the other participants' choices. At the end of the session, the amount will be paid to you in cash and in private.
-During the experiment you may also contribute to the charity you have chosen during your identification. The corresponding amount, arising from your own and other participants' choices will formally be included in your invoice, but it will be immediately donated online to the charity of your choice after the end of the session. You will be asked to sign an invoice comprising your payment and the donation to the charity.</p>
+You can earn money by taking part in this experiment. The exact amount you will earn depends on your and the other participants' choices. At the end of the session, the amount will be paid to you in cash in private.
+During the experiment you may also contribute to the charity you have previously chosen. The corresponding amount, arising from your own and other participants' choices will be included in your invoice, but it will be immediately donated online to the charity of your choice at the end of the session. You will be asked to sign an invoice for your payment and charity donation.</p>
 <p>
-The experiments includes {{ n }} different activities to be carried out on the computer and a brief final survey on paper.
-The choices you will make in each activity will have no influence on neither previous nor following activities. The earnings accrued within each activity will be notified to each participant, only at the end of the experiment.
+The experiments includes {{ n }} different activities to be carried out on the computer and a brief final survey.
+The choices you make in each activity have no influence on either previous or subsequent activities in this experiment. The earnings accrued within each activity will be notified to each participant, only at the end of the experiment.
 </p>
 <p>
-    <strong>Each activity allows to earn points which are converted to real money at the rate of {{ tasso }} points for 1£. </strong>
+    <strong>Each activity allows you to earn points which are converted to real money at the rate of 1£ for every {{ tasso }} points. </strong>
 </p>
 <p>
-It is important to be aware that all your decisions and earnings are strictly private and anonymous. The experimenters will study the data pertaining to the choices made today without being able to link them to the actual identity of the participants.
+It is important to be aware that all your decisions and earnings are strictly private and anonymous. The researchers will study the data from to the choices made without being able to link them to the identity of any participants.
 At the same time you will be paid by the administrative staff, who will have no access to the data concerning the choices that determined your earnings.
 {% endblocktrans %}
     {% next_button %}
