Ulteriori limature all'inglese

--- a/market/templates/market/Short_Instructions.html
+++ b/market/templates/market/Short_Instructions.html
@@ -50,7 +50,7 @@ The social contribution associated to your production at each round of the game 
 <p><strong>Social contribution = 1.5 x Quality x Market share</strong>
  </p>
 <p>
-The points you earned in the paying period, both in terms of
+The points you earn in the paying period, both in terms of
 profit and social contribution, will be transformed in cash.
 
 </p>
