--- a/public_goods/templates/public_goods/Results.html
+++ b/public_goods/templates/public_goods/Results.html
@@ -50,8 +50,8 @@
     </table>
 
     {% next_button %}
-
+ {% comment %}
     {% include 'public_goods/Instructions.html' %}
-
+ {% endcomment %}
 
 {% endblock %}
