Ancora qualche limatura nell'interfaccia

--- a/market/templates/market/Instructions.html
+++ b/market/templates/market/Instructions.html
@@ -20,29 +20,29 @@ At the same time, the market share increases
 <p>
     <table align="center" class="table" style="width:70%">
 
-        <tr>
-            <td> </td>
-            <td> {% trans "Your quality" %}  </td>
-            <td> {% trans "Your price" %} </td>
-            <td> {% trans "Competitor's quality" %} </td>
-            <td> {% trans "Competitor's price" %} </td>
-        </tr>
-        <tr>
-            <td> {% trans "Your market share" %} </td>
-            <th> + </th>
-            <th> - </th>
-            <th> - </th>
-            <th> + </th>
-        </tr>
-        <tr>
-            <td> {% trans "Competitor's market share" %} </td>
-            <td> - </td>
-            <td> + </td>
-            <td> + </td>
-            <td> - </td>
-        </tr>
+    <tr>
+        <td> </td>
+        <td align="center"> {% trans "Your quality" %}  </td>
+        <td align="center"> {% trans "Your price" %} </td>
+        <td align="center"> {% trans "Competitor's quality" %} </td>
+        <td align="center"> {% trans "Competitor's price" %} </td>
+    </tr>
+    <tr>
+        <td> {% trans "Your market share" %} </td>
+        <td align="center"> + </td>
+        <td align="center"> – </td>
+        <td align="center"> – </td>
+        <td align="center"> + </td>
+    </tr>
+    <tr>
+        <td> {% trans "Competitor's market share" %} </td>
+        <td align="center"> – </td>
+        <td align="center"> + </td>
+        <td align="center"> + </td>
+        <td align="center"> – </td>
+    </tr>
 
-    </table>
+</table>
 
 </p>
 {% blocktrans trimmed %}
