--- a/welcome_noCharity/templates/welcome_noCharity/Welcome.html
+++ b/welcome_noCharity/templates/welcome_noCharity/Welcome.html
@@ -25,7 +25,7 @@ Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare
 </p>
 <p>
 L’esperimento consiste di due diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
-Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
+Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti dell'altra attività. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
 </p>
 <p>
 È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime.
