settings in italiano - 8

--- a/welcome_noCharity/templates/welcome_noCharity/Welcome.html
+++ b/welcome_noCharity/templates/welcome_noCharity/Welcome.html
@@ -27,6 +27,9 @@ Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare
 L’esperimento consiste di due diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
 Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti dell'altra attività. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
 </p>
+    <strong>Ciascuna attività consente di guadagnare dei punti che sono poi convertiti in denaro al tasso
+        di 20 punti per 1 Euro. </strong>
+    </p>
 <p>
 È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime.
     Nessuno degli altri partecipanti potrà conoscere le scelte da te effettuate durante l’esperimento né l’ammontare dei tuoi guadagni. Anche gli sperimentatori studieranno i dati relativi alle scelte senza poterli abbinare all'identità dei partecipanti all’esperimento.
