settings in italiano - 9

--- a/bare_market/templates/bare_market/Instructions.html
+++ b/bare_market/templates/bare_market/Instructions.html
@@ -20,24 +20,24 @@ Rappresentate due imprese che competono fra loro. Producete un bene fittizio di 
 
         <tr>
             <td> </td>
-            <td> Tua qualità  </td>
-            <td> Tuo prezzo </td>
-            <td> Sua qualità </td>
-            <td> Suo prezzo </td>
+            <td align="center"> Tua qualità  </td>
+            <td align="center"> Tuo prezzo </td>
+            <td align="center"> Sua qualità </td>
+            <td align="center"> Suo prezzo </td>
         </tr>
         <tr>
             <td> Tua quota di mercato </td>
-            <td> + </td>
-            <td> - </td>
-            <td> - </td>
-            <td> + </td>
+            <td align="center"> + </td>
+            <td align="center"> – </td>
+            <td align="center"> – </td>
+            <td align="center"> + </td>
         </tr>
         <tr>
             <td> Sua quota di mercato </td>
-            <td> - </td>
-            <td> + </td>
-            <td> + </td>
-            <td> - </td>
+            <td align="center"> – </td>
+            <td align="center"> + </td>
+            <td align="center"> + </td>
+            <td align="center"> – </td>
         </tr>
 
     </table>
