--- a/bare_market/templates/bare_market/Short_Instructions.html
+++ b/bare_market/templates/bare_market/Short_Instructions.html
@@ -15,24 +15,24 @@
 
         <tr>
             <td> </td>
-            <td> Tua qualità  </td>
-            <td> Tuo prezzo </td>
-            <td> Sua qualità </td>
-            <td> Suo prezzo </td>
+            <td align="center"> Tua qualità  </td>
+            <td align="center"> Tuo prezzo </td>
+            <td align="center"> Sua qualità </td>
+            <td align="center"> Suo prezzo </td>
         </tr>
         <tr>
             <td> Tua quota di mercato </td>
-            <td> + </td>
-            <td> - </td>
-            <td> - </td>
-            <td> + </td>
+            <td align="center"> + </td>
+            <td align="center"> – </td>
+            <td align="center"> – </td>
+            <td align="center"> + </td>
         </tr>
         <tr>
             <td> Sua quota di mercato </td>
-            <td> - </td>
-            <td> + </td>
-            <td> + </td>
-            <td> - </td>
+            <td align="center"> – </td>
+            <td align="center"> + </td>
+            <td align="center"> + </td>
+            <td align="center"> – </td>
         </tr>
 
     </table>
@@ -44,11 +44,7 @@
 <strong>Profitto = (Prezzo - Qualità) x Quota di mercato</strong>
  </p>
 
-<p>
-    I punti da te ottenuti in termini di profitto nel turno sorteggiato saranno trasformati
-    in euro secondo il tasso di conversione <strong>20 punti = 1 euro</strong>.
 
-</p>
 {% endblocktrans %}
 
 {% endblock %}
