--- a/welcome_noCharity/templates/welcome_noCharity/Welcome.html
+++ b/welcome_noCharity/templates/welcome_noCharity/Welcome.html
@@ -21,14 +21,16 @@ http://getbootstrap.com/components/
 {% blocktrans trimmed %}
 <p>Siamo lieti di darti il benvenuto a questo esperimento. Ti preghiamo di leggere le seguenti istruzioni con attenzione. Durante tutto il corso dell’esperimento è assolutamente vietato comunicare con altri partecipanti. Eventuali domande di chiarimento devono essere rivolte esclusivamente agli organizzatori. </p>
 <p>
-Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare dipende dalle scelte che saranno effettuate da te e dagli altri partecipanti. Al termine dell’esperimento, tale somma ti sarà pagata in contanti e in forma privata in modo da garantire la riservatezza.
+Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare dipende dalle scelte che saranno effettuate da te e dagli altri partecipanti. </p>
+<p>Al termine dell’esperimento, tale somma ti sarà pagata in contanti e in forma privata in modo da garantire la riservatezza.
 </p>
 <p>
-L’esperimento consiste di due diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
-Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti dell'altra attività. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
+L’esperimento consiste di {{ n }} diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
+Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive.
+    I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
 </p>
     <strong>Ciascuna attività consente di guadagnare dei punti che sono poi convertiti in denaro al tasso
-        di 20 punti per 1 Euro. </strong>
+        di {{ tasso }} punti per 1 Euro. </strong>
     </p>
 <p>
 È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime.
