settings in italiano - 12

--- a/welcome_noCharity/templates/welcome_noCharity/Welcome.html
+++ b/welcome_noCharity/templates/welcome_noCharity/Welcome.html
@@ -25,7 +25,7 @@ Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare
 <p>Al termine dell’esperimento, tale somma ti sarà pagata in contanti e in forma privata in modo da garantire la riservatezza.
 </p>
 <p>
-L’esperimento consiste di {{ n }} diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
+L’esperimento consiste di 3 diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
 Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive.
     I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
 </p>
