Aggiornamenti di marketinfo

--- a/marketInfo/templates/marketInfo/Instructions.html
+++ b/marketInfo/templates/marketInfo/Instructions.html
@@ -5,8 +5,8 @@
 {% block instructions %}
 
 {% blocktrans trimmed with num_rounds=Constants.num_rounds %}
-This activity is exactly the same as the previous one. The only difference will be that you will
-be informed of the course of studies of your competitor (in the following screen). Your
+This activity is exactly the same as the very first one. The only difference will be that you will
+be informed of the type of your competitor (in the following screen). Your
 new competitor will in any case be selected afresh at random. <br>  <br>
 {% endblocktrans %}
 
